fix nav background color on mobile (MLNN-1095) (#547)
* fix nav background color on mobile

* changes from garett's review

--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -635,7 +635,8 @@ p {
     position: fixed;
     top: calc(calc(var(--gap-lg) * 2 + 32px) + 0.5rem);
     left: 0;
-    width: 100vw;
+    width: 100%;
+    height: min-content;
     background-color: var(--color-navigation);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
     list-style-type: none;
